# His2Trans

./: .gitattributes  .gitignore  README.md  requirements.txt
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/adapter/native/idl/: BUILD.gn
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/frameworks/native/: BUILD.gn  hisysevent_json_decorator.cpp  hisysevent_tool.cpp  hisysevent_tool_listener.cpp  hisysevent_tool_query.cpp
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/frameworks/native/c_wrapper/: BUILD.gn
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/frameworks/native/include/: hisysevent_json_decorator.h
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/frameworks/native/util/: BUILD.gn  string_util.cpp
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/interfaces/rust/innerkits/: BUILD.gn  Cargo.toml
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/test/moduletest/common/: BUILD.gn  hisysevent_adapter_native_test.cpp  hisysevent_c_test.cpp  hisysevent_delay_test.cpp  hisysevent_encoded_test.cpp  hisysevent_manager_c_test.cpp  hisysevent_native_test.cpp  hisysevent_wrote_result_check_test.cpp
data/ohos/ohos_root_min/base/hiviewdfx/hisysevent/test/unittest/rust/: BUILD.gn
data/ohos/ohos_root_min/base/notification/eventhandler/frameworks/cj/: BUILD.gn
data/ohos/ohos_root_min/base/notification/eventhandler/frameworks/cj/src/: emitter.cpp  emitter.h  emitter_common.h  emitter_ffi.cpp  emitter_ffi.h  emitter_log.h  emitter_mock.cpp  event_handler_impl.cpp  event_handler_impl.h
data/ohos/ohos_root_min/base/notification/eventhandler/frameworks/eventhandler/: BUILD.gn  handler_blocklist.txt  inner_api_sources.gni
data/ohos/ohos_root_min/base/notification/eventhandler/frameworks/eventhandler/include/: event_queue_base.h  event_queue_ffrt.h
data/ohos/ohos_root_min/base/notification/eventhandler/frameworks/eventhandler/src/: deamon_io_waiter.cpp  epoll_io_waiter.cpp  event_handler.cpp  event_queue.cpp  event_queue_base.cpp  event_queue_ffrt.cpp  event_runner.cpp  ffrt_descriptor_listener.cpp  inner_event.cpp
data/ohos/ohos_root_min/base/notification/eventhandler/frameworks/eventhandler/test/: BUILD.gn
data/ohos/ohos_root_min/base/notification/eventhandler/frameworks/native/: BUILD.gn
data/ohos/ohos_root_min/commonlibrary/c_utils/base/test/benchmarktest/: BUILD.gn  README.md  README_zh.md  benchmark_assert.h  benchmark_log.h
data/ohos/ohos_root_min/commonlibrary/c_utils/base/test/benchmarktest/ashemem_benchmark_test/: BUILD.gn  ashemem_benchmark_test.cpp
data/ohos/ohos_root_min/commonlibrary/c_utils/base/test/benchmarktest/datatime_benchmark_test/: BUILD.gn  datatime_benchmark_test.cpp
data/ohos/ohos_root_min/commonlibrary/c_utils/base/test/benchmarktest/directory_benchmark_test/: BUILD.gn  directory_benchmark_test.cpp
data/ohos/ohos_root_min/commonlibrary/c_utils/base/test/benchmarktest/event_benchmark_test/: BUILD.gn  event_benchmark_test.cpp
data/ohos/ohos_root_min/commonlibrary/c_utils/base/test/benchmarktest/file_benchmark_test/: BUILD.gn  file_benchmark_test.cpp
data/ohos/ohos_root_min/drivers/hdf_core/adapter/: BUILD.gn  OAT.xml  README.md
data/ohos/ohos_root_min/drivers/hdf_core/adapter/khdf/linux/: Kconfig  Makefile  README.md  patch_hdf.sh
data/ohos/ohos_root_min/drivers/hdf_core/adapter/khdf/liteos/: BUILD.gn  Kconfig  README.md  hdf.gni  hdf_lite.mk  lite.mk
data/ohos/ohos_root_min/drivers/hdf_core/adapter/khdf/liteos_m/: BUILD.gn  Kconfig  README.md  hdf.gni  hdi_mini.gni
data/ohos/ohos_root_min/drivers/hdf_core/adapter/khdf/uniproton/: BUILD.gn  Kconfig  README.md  README_zh.md  hdf.gni
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/can/: can_virtual.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/gpio/: BUILD.gn  gpio_asr.c  gpio_bes.c  gpio_gr5xx.c  gpio_stm32f4xx.c  gpio_wm.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/i2c/: BUILD.gn  i2c_bes.c  i2c_bes.h  i2c_stm32f4xx.c  i2c_wm.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/mipi_dsi/: BUILD.gn  mipi_drm_imx8mm.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/pwm/: BUILD.gn  pwm_bes.c  pwm_stm32f4xx.c  pwm_wm.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/spi/: BUILD.gn  spi_bes.c  spi_stm32f4xx.c  spi_wm.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/uart/: BUILD.gn  uart_asr.c  uart_bes.c  uart_gr5xx.c  uart_stm32f4xx.c  uart_wm.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/platform/watchdog/: BUILD.gn  watchdog_bes.c  watchdog_stm32f4xx.c  watchdog_wm.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf/manager/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf/platform/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf/posix/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf/test/: BUILD.gn  platform_test.gni
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/: hdi.gni  uhdf.gni
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/hcs/: hcs.gni
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/hdi/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/host/: BUILD.gn  devhost.c
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/ipc/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/manager/: BUILD.gn  device_manager.c  hdf_devmgr.cfg  hdf_devmgr.para.dac
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/platform/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/pub_utils/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/security/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/test/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/adapter/uhdf2/utils/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/framework/test/fuzztest/: BUILD.gn
data/ohos/ohos_root_min/drivers/hdf_core/framework/tools/hdf_dbg/: BUILD.gn  hdf_dbg.cpp
data/ohos/ohos_root_min/foundation/systemabilitymgr/samgr/services/samgr/: var.gni
data/rq1/claude/c_source/c_source/shared__12e38ea922f7/test/: BUILD.gn
(+2906 files in other folders)
