# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../../adapter/uhdf2/uhdf.gni")

module_output_path = "hdf_core/dev_attribute_serialize"
hdf_uhdf_path = "./../.."
hdf_framework_path = "./../../../../framework"

ohos_unittest("dev_attribute_serialize_test") {
  module_out_path = module_output_path
  include_dirs = [
    "$hdf_uhdf_path/shared/include",
    "$hdf_framework_path/core/shared/include",
  ]
  sources = [ "dev_attribute_serialize_test.cpp" ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_utils",
  ]
}

###########################end###########################
group("unittest") {
  testonly = true
  deps = [ ":dev_attribute_serialize_test" ]
}
