# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../eventhandler.gni")

ohos_shared_library("cj_emitter_ffi") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "${inner_api_path}",
  ]

  external_deps = [ "napi:cj_bind_ffi" ]

  if (!ohos_indep_compiler_enable && !build_ohos_sdk) {
    external_deps += [
      "hilog:libhilog",
      "napi:cj_bind_native",
    ]
    deps = [ "${frameworks_path}/eventhandler:libeventhandler" ]

    sources = [
      "src/emitter.cpp",
      "src/emitter_ffi.cpp",
      "src/event_handler_impl.cpp",
    ]
  } else {
    sources = [ "src/emitter_mock.cpp" ]
  }

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "notification"
  part_name = "eventhandler"
}
