# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("benchmarktest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    "ashemem_benchmark_test:AshememTest",
    "datatime_benchmark_test:DatatimeTest",
    "directory_benchmark_test:DirectoryTest",
    "event_benchmark_test:EventTest",
    "file_benchmark_test:FileTest",
    "mapped_benchmark_test:MappedTest",
    "observer_benchmark_test:ObserverTest",
    "parcel_benchmark_test:ParcelTest",
    "refbase_benchmark_test:RefbaseTest",
    "rwlock_benchmark_test:RwlockTest",
    "safe_block_queue_benchmark_test:SafeBlockQueueTest",
    "safe_block_queue_tracking_benchmark_test:SafeBlockQueueTrackingTest",
    "safe_map_benchmark_test:SafeMapTest",
    "safe_queue_benchmark_test:SafeQueueTest",
    "singleton_benchmark_test:SingletonTest",
    "sorted_vector_benchmark_test:SortedVectorTest",
    "string_benchmark_test:StringTest",
    "thread_benchmark_test:ThreadTest",
    "thread_pool_benchmark_test:ThreadPoolTest",
    "timer_benchmark_test:TimerTest",
    "unique_fd_benchmark_test:UniqueFdTest",
  ]
}
