# Copyright (c) 2020-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

inner_api_relative_path = "./../../../interfaces/inner_api"

config("hdf_core_pub_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "$inner_api_relative_path/osal/shared",
    "$inner_api_relative_path/osal/uhdf",
    "$inner_api_relative_path/utils",
    "$inner_api_relative_path/core",
  ]
}

ohos_shared_library("hdf_core") {
  hdf_frameworks_path = "./../../../framework"
  include_dirs = [
    "$hdf_frameworks_path/core/adapter/vnode/include",
    "$hdf_frameworks_path/core/adapter/syscall/include",
    "$hdf_frameworks_path/core/shared/include",
    "$hdf_frameworks_path/core/host/include",
    "$hdf_frameworks_path/core/manager/include",
    "$hdf_frameworks_path/include/core",
    "$hdf_frameworks_path/include/utils",
    "$hdf_frameworks_path/utils/include",
  ]

  public_configs = [ ":hdf_core_pub_config" ]

  sources = [
    "$hdf_frameworks_path/core/adapter/syscall/src/hdf_devmgr_adapter.c",
    "$hdf_frameworks_path/core/adapter/syscall/src/hdf_syscall_adapter.c",
    "$hdf_frameworks_path/core/shared/src/hdf_io_service.c",
    "$hdf_frameworks_path/core/shared/src/ioserstat_listener.c",
    "$hdf_frameworks_path/core/shared/src/service_status.c",
    "$hdf_frameworks_path/core/shared/src/svcmgr_ioservice.c",
    "$hdf_frameworks_path/utils/src/hdf_sbuf.c",
    "$hdf_frameworks_path/utils/src/hdf_sbuf_impl_raw.c",
  ]

  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  external_deps = [ "hdf_core:hdf_posix_osal" ]
  defines = [ "__USER__" ]

  # install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "hdf_core"
}
