# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/test.gni")
import("platform_test.gni")

lite_component("hdf_test_uhdf") {
  # add hdf subsystem unittest
  unittest_path = "./unittest"
  if (ohos_build_type == "debug") {
    deps = [
      "$unittest_path/config:hdf_adapter_uhdf_test_config",
      "$unittest_path/manager:hdf_adapter_uhdf_test_door",
      "$unittest_path/manager:hdf_adapter_uhdf_test_ioservice",
      "$unittest_path/manager:hdf_adapter_uhdf_test_manager",
      "$unittest_path/manager:hdf_adapter_uhdf_test_pm",
      "$unittest_path/manager:hdf_adapter_uhdf_test_sbuf",
      "$unittest_path/osal:hdf_adapter_uhdf_test_osal",
      "$unittest_path/osal:hdf_adapter_uhdf_test_osal_posix",
    ]
    if (hdf_core_platform_test_support || hdf_core_platform_rtc_test_support) {
      deps += [ "$unittest_path/platform:hdf_adapter_uhdf_test_platform" ]
    }
  }
  features = []
}
